--- a/assets/css/style-main.css
+++ b/assets/css/style-main.css
@@ -14,7 +14,7 @@ URL:            http://themeforest.net/user/ThemeMascot
 @import "../css/pe-icon-7-stroke.css";
 /* @import "../css/elegant-icons.css"; */
 /* @import "../css/stroke-gap-icons.css"; */
-@import "../css/flaticon-set-charity.css";
+/* @import "../css/flaticon-set-charity.css"; */
 @import "../css/utility-classes.css";
 @import url(https://fonts.googleapis.com/css?family=Open+Sans:300,400,500,600,700,800|Raleway:400,300,200,500,700,600,800|Trirong:100,200,300,400,500,600,700,800,900);
 /*
