--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -10,7 +10,7 @@ theme. But don't modify style-main.css file.
 /* Your custom css codes start here: */
 
 #google_translate_element select{
-    background:#C12127;
+    background:#33ADFF;
     color:#ffffff;
     border: none;
     border-radius:3px;
