--- a/assets/less/less-theme-color/theme-skin-red.less
+++ b/assets/less/less-theme-color/theme-skin-red.less
@@ -3,8 +3,8 @@
 @URL: http://themeforest.net/user/ThemeMascot
 
 COLOR : Red
-COLOR CODE: #C12127
+COLOR CODE: #33ADFF
 ----------------------------------------- */
-@theme-color: #C12127;
+@theme-color: #33ADFF;
 
 @import "theme-skin-color.less";
